<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tager | تاجر</string>
    <string name="shortcut_products_short">المنتجات</string>
    <string name="shortcut_products_long">تصفح منتجات تاجر</string>
    <string name="shortcut_track_short">تتبع الطلب</string>
    <string name="shortcut_track_long">متابعة حالة الطلب</string>
    <string name="shortcut_cart_short">السلة</string>
    <string name="shortcut_cart_long">فتح سلة المشتريات</string>
    <string name="shortcut_downloads_short">التنزيلات</string>
    <string name="shortcut_downloads_long">فتح مركز تنزيلات تاجر</string>
    <string name="shortcut_settings_short">الإعدادات</string>
    <string name="shortcut_settings_long">إعدادات وحالة تطبيق تاجر</string>
</resources>
